more references and text

--- a/references.bib
+++ b/references.bib
@@ -369,3 +369,47 @@ author = {Ravid Shwartz-Ziv and Amitai Armon}
   journal={arXiv},
   year={2014}
 }
+
+@article{breiman1996stacked,
+  title={Stacked regressions},
+  author={Breiman, Leo},
+  journal={Machine learning},
+  volume={24},
+  pages={49-64},
+  year={1996},
+  publisher={Springer}
+}
+
+@article{smyth1999linearly,
+  title={Linearly combining density estimators via stacking},
+  author={Smyth, Padhraic and Wolpert, David},
+  journal={Machine Learning},
+  volume={36},
+  pages={59-83},
+  year={1999},
+  publisher={Springer}
+}
+
+@Book{HastieEtAl2017,
+  Author = {Hastie, T and Tibshirani, R and  Friedman, J},
+  Edition = {},
+  Publisher = {Springer},
+  Title = {{The Elements of Statistical Learning: Data Mining, Inference and Prediction}},
+  Year = {2017}
+}
+
+@book{goodfellow2016deep,
+  title={Deep learning},
+  author={Goodfellow, Ian and Bengio, Yoshua and Courville, Aaron},
+  year={2016},
+  publisher={MIT press}
+}
+
+@book{charu2018neural,
+  title={Neural networks and deep learning: a textbook},
+  author={Charu, Aggarwal},
+  year={2018},
+  publisher={Spinger}
+}
+
+
