more references and text

--- a/references.bib
+++ b/references.bib
@@ -38,7 +38,7 @@
   title={Tidy modeling with R},
   author={Kuhn, Max and Silge, Julia},
   year={2022},
-  publisher={" O'Reilly Media, Inc."}
+  publisher={O'Reilly Media, Inc"}
 }
 
 @Article{Hawkins2004p1,
@@ -412,4 +412,31 @@ author = {Ravid Shwartz-Ziv and Amitai Armon}
   publisher={Spinger}
 }
 
+@Article{Abdi2010p3532,
+  Author = {Herve Abdi and Lynne Williams},
+  Journal = {Wiley Interdisciplinary Reviews: Computational Statistics},
+  Number = {4},
+  Pages = {433-459},
+  Title = {Principal Component Analysis},
+  Volume = {2},
+  Year = {2010}
+}
 
+@Article{Massy1965p234,
+  Author = {William Massy},
+  Journal = {Journal of the American Statistical Association},
+  Pages = {234-246},
+  Title = {Principal Components Regression in Exploratory Statistical Research},
+  Volume = {60},
+  Year = {1965}
+}
+
+@article{hasan2021missing,
+  title={Missing value imputation affects the performance of machine learning: A review and analysis of the literature (2010--2021)},
+  author={Hasan, Md Kamrul and Alam, Md Ashraful and Roy, Shidhartho and Dutta, Aishwariya and Jawad, Md Tasnim and Das, Sunanda},
+  journal={Informatics in Medicine Unlocked},
+  volume={27},
+  pages={100799},
+  year={2021},
+  publisher={Elsevier}
+}
