test set and post-modeling stuff

--- a/references.bib
+++ b/references.bib
@@ -440,3 +440,47 @@ author = {Ravid Shwartz-Ziv and Amitai Armon}
   year={2021},
   publisher={Elsevier}
 }
+
+@inproceedings{mitchell2019model,
+  title={Model cards for model reporting},
+  author={Mitchell, Margaret and Wu, Simone and Zaldivar, Andrew and Barnes, Parker and Vasserman, Lucy and Hutchinson, Ben and Spitzer, Elena and Raji, Inioluwa Deborah and Gebru, Timnit},
+  booktitle={Proceedings of the conference on fairness, accountability, and transparency},
+  pages={220-229},
+  year={2019}
+}
+
+@book{molnar2020interpretable,
+  title={Interpretable machine learning},
+  author={Molnar, Christoph},
+  year={2020},
+  publisher={Independently published}
+}
+
+@book{biecek2021explanatory,
+  title={Explanatory model analysis: explore, explain, and examine predictive models},
+  author={Biecek, Przemyslaw and Burzykowski, Tomasz},
+  year={2021},
+  publisher={CRC Press}
+}
+
+@article{netzeva2005current,
+  title={Current status of methods for defining the applicability domain of (quantitative) structure-activity relationships},
+  author={Netzeva, Tatiana I and Worth, Andrew P and Aldenberg, Tom and Benigni, Romualdo and Cronin, Mark TD and Gramatica, Paola and Jaworska, Joanna S and Kahn, Scott and Klopman, Gilles and Marchant, Carol A and others},
+  journal={Alternatives to Laboratory Animals},
+  volume={33},
+  number={2},
+  pages={155-173},
+  year={2005},
+  publisher={SAGE Publications Sage UK: London, England}
+}
+
+@article{gadaleta2016applicability,
+  title={Applicability domain for QSAR models: where theory meets reality},
+  author={Gadaleta, Domenico and Mangiatordi, Giuseppe Felice and Catto, Marco and Carotti, Angelo and Nicolotti, Orazio},
+  journal={International journal of quantitative structure-property relationships (IJQSPR)},
+  volume={1},
+  number={1},
+  pages={45-63},
+  year={2016},
+  publisher={IGI Global}
+}
